[package]
name = "visual_arpoetry_backend_rust"
version = "0.1.0"
authors = ["kalwalt <github@kalwaltart.it>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23.14"
imageproc = "0.22.0"
chrono = "0.4"
serde = { version = "1.0.125", features = ["derive"] }
serde_json = "1.0.64"